k8s/backend/doctor/doctor-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-doctor-api-depl
  namespace: backend-api
spec:
  selector:
    matchLabels:
      app: backend-doctor-api-depl
  template:
    metadata:
      labels:
        app: backend-doctor-api-depl
    spec:
      containers:
        - name: backend-doctor-api-depl
          image: synthiatelemed.azurecr.io/backend-api:2ad85d09a895bbed2032069a1816eebfb55364cb
          command:
            - "/app/bin/doctor-api"
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "16Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
