k8s/backend/doctor/doctor-api-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-doctor-api-srv
  namespace: backend-api
spec:
  selector:
    app: backend-doctor-api-depl
  ports:
  - port: 8080
    targetPort: 8080
